Fix media view rows spacing

--- a/srv/www/index.css
+++ b/srv/www/index.css
@@ -147,6 +147,9 @@ table {
 .media-row-info tr.sub-list-row > td:not(:first-child) {
 	text-align: right;
 }
+.media-row-info {
+	margin: 0.125em;
+}
 .simple-rows-table th,
 .simple-rows-table td:not(:first-child),
 .media-row-info tr > *,
